switch statements in index.js
Trying to route my locations to the correct .js file from index.js. working on local live, let's see for the deployed site now..
Also removed <script ++index.js from the static pages unitil the day I'll fetch them from the api as well.

--- a/fenty-beauty.html
+++ b/fenty-beauty.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Marte Lilleberre">
-    <meta name="description"
-        content="Vellkommen til Fenty Norge. Her finner du informasjon om Rihannas varemerke Fenty Beauty">
+    <meta name="description" content="Her finner du informasjon om Rihannas varemerke Fenty Beauty">
     <meta name="keywords" content="rihanna, fenty, fenty beauty, fenty skin, blog">
     <title>Fenty.no - Savage x Fenty</title>
     <link rel="stylesheet" href="/css/index.css">
@@ -16,7 +15,6 @@
         href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600&family=Inter:wght@100;200;300;400;500;600;700&family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/1664c6557b.js" crossorigin="anonymous"></script>
-    <script type="module" src="js/Pages.js/index.js"></script>
     <!-- Hotjar Tracking Code for Fenty Norge -->
     <script>
         (function (h, o, t, j, a, r) {
@@ -116,10 +114,12 @@
             </div>
             <div class="right-footer">
                 <p>Følg oss</p>
-                <div class="instagram"><a href="https://instagram.com/fentynorge" target="_blank"
-                        aria-label="instagram link"><i class="fa-brands fa-instagram fa-2xl"></i></a></div>
-                <div class="twitter"><a href="https://x.com/fentynorge" target="_blank" aria-label="Twitter/X link"><i
-                            class="fa-brands fa-x-twitter fa-2xl"></i></a></div>
+                <div class="social-media">
+                    <div class="instagram"><a href="https://instagram.com/fentynorge" target="_blank"
+                            aria-label="instagram link"><i class="fa-brands fa-instagram fa-2xl"></i></a></div>
+                    <div class="twitter"><a href="https://x.com/fentynorge" target="_blank"
+                            aria-label="Twitter/X link"><i class="fa-brands fa-x-twitter fa-2xl"></i></a></div>
+                </div>
             </div>
         </div>
         </div>
