--- a/savagex.html
+++ b/savagex.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Marte Lilleberre">
-    <meta name="description"
-        content="Velkommen til Fenty Norge. Her finner du alt om Rihannas varemerke Savage x Fenty">
+    <meta name="description" content="Her finner du info om Rihannas varemerke Savage x Fenty">
     <meta name="keywords" content="rihanna, fenty, savagex, blog">
     <title>Fenty.no - Savage x Fenty</title>
     <link rel="stylesheet" href="/css/index.css">
@@ -16,7 +15,7 @@
         href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600&family=Inter:wght@100;200;300;400;500;600;700&family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/1664c6557b.js" crossorigin="anonymous"></script>
-    <script type="module" src="js/Pages.js/index.js"></script>
+
     <!-- Hotjar Tracking Code for Fenty Norge -->
     <script>
         (function (h, o, t, j, a, r) {
