--- a/single-post.html
+++ b/single-post.html
@@ -9,9 +9,9 @@
         content="Her finner du blog innlegg om Rihannas varemerker og lanseringer, i tillegg til nyheter om Rihanna">
     <meta name="keywords" content="rihanna, fenty, fenty beauty, fenty skin, savagex, blog">
     <title>Fenty.no - blog post</title>
+    <script type="module" src="js/Pages.js/index.js"></script>
+    <!-- <script type="module" src="/js/Pages.js/singlePost.js"></script> -->
     <link rel="stylesheet" href="/css/index.css">
-    <script type="module" src="/js/Pages.js/singlePost.js"></script>
-    <!-- <script type="module" src="/js/components/moreBlogPostsCarousel.js"></script> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
