--- a/category.html
+++ b/category.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Her finner du blog innlegg som matcher kategorien du valgte">
     <meta name="keywords" content="rihanna, fenty, fenty beauty, fenty skin, savagex, blog, kategori">
     <title>Fenty.no - Category: </title>
+    <script type="module" src="js/Pages.js/index.js"></script>
+    <!-- <script type="module" src="js/Pages.js/category.js"></script> -->
     <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,8 +17,6 @@
         href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600&family=Inter:wght@100;200;300;400;500;600;700&family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/1664c6557b.js" crossorigin="anonymous"></script>
-    <!-- <script type="module" src="js/fetchAPI/getPost.js"></script> -->
-    <script type="module" src="js/Pages.js/category.js"></script>
     <!-- Hotjar Tracking Code for Fenty Norge -->
     <script>
         (function (h, o, t, j, a, r) {
