--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
         content="Har du spørsmpål? Her kan du sende inn et kontaktskjema om du lurer på, eller savner, noe.">
     <meta name="keywords" content="rihanna, fenty, fenty beauty, fenty skin, savagex, blog, kontakt, spørsmål, svar">
     <title>Fenty.no - Kontakt</title>
+    <script type="module" src="js/Pages.js/index.js"></script>
     <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +17,7 @@
         href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600&family=Inter:wght@100;200;300;400;500;600;700&family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/1664c6557b.js" crossorigin="anonymous"></script>
-    <script type="module" src="js/Pages.js/contact.js"></script>
+    <!-- <script type="module" src="js/Pages.js/contact.js"></script> -->
     <!-- Hotjar Tracking Code for Fenty Norge -->
     <script>
         (function (h, o, t, j, a, r) {
