--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         content="Velkommen til Fenty Norge. Her finner du alt om Rihannas varemerker og lanseringer, i tillegg til nyheter om Rihanna">
     <meta name="keywords" content="rihanna, fenty, fenty beauty, fenty skin, savagex, blog">
     <title>Fenty.no</title>
+    <script type="module" src="js/Pages.js/index.js"></script>
+    <!-- <script type="module" src="js/fetchAPI/getPost.js"></script> -->
     <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +18,6 @@
         href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600&family=Inter:wght@100;200;300;400;500;600;700&family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/1664c6557b.js" crossorigin="anonymous"></script>
-    <script type="module" src="js/fetchAPI/getPost.js"></script>
     <!-- Hotjar Tracking Code for Fenty Norge -->
     <script>
         (function (h, o, t, j, a, r) {
@@ -152,6 +153,13 @@
                     <label for="searchbar">Eller søk etter tema:</label>
                     <input type="search" id="searchbar" name="searchbar" placeholder="Søk i innlegg..">
                 </div> -->
+                <div class="newest-comments">
+                    <h2>Nye kommentarer</h2>
+
+                    <ul>
+                        <div class="loader"></div>
+                    </ul>
+                </div>
                 <div class="newest-posts">
                     <h2>Nyeste innlegg</h2>
                     <div class="new-blog-post-list">
@@ -160,18 +168,6 @@
                         </ul>
                     </div>
                 </div>
-                <div class="newest-comments">
-                    <h2>Nye kommentarer</h2>
-
-                    <ul>
-                        <div class="loader"></div>
-                    </ul>
-                </div>
-                <!-- <div class="newest-instagram">
-                    <img src="/img/instagram-header.png">
-                    <h2>Instagram feed</h2>
-                    <div class="horizontal-line"></div>
-                </div> -->
 
             </div>
         </div>
