contact from update
Updated the contact form when submitted and not.
also added the index.js to the static site so my hamburger menu works, woopsie

--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
                         <input type="hidden" name="_wpcf7_unit_tag" value="wpcf7-f91-p92-o1" />
                         <div class="submit-form">
                             <button type="submit" id="submit">Send inn kontaktskjema</button>
-                            <div class="success-message"></div>
+                            <div class="error-message"></div>
                         </div>
                     </fieldset>
                 </form>
