--- a/discography.html
+++ b/discography.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Her finner du informasjon om Rihannas musikkutgivelser">
     <meta name="keywords" content="rihanna, fenty, fenty beauty, fenty skin, savagex, blog, musikk">
     <title>Fenty.no - Kontakt</title>
+    <script type="module" src="js/Pages.js/index.js"></script>
     <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
