--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Litt om hvem som står bak fenty.no">
     <meta name="keywords" content="rihanna, fenty, fenty beauty, fenty skin, savagex, blog, om oss, informasjon">
     <title>Fenty.no - Om oss</title>
-    <script type="module" src="js/Pages.js/index.js"></script>
+    <script type="module" src="js/index.js"></script>
     <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
