--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         content="Velkommen til Fenty Norge. Her finner du alt om Rihannas varemerker og lanseringer, i tillegg til nyheter om Rihanna">
     <meta name="keywords" content="rihanna, fenty, fenty beauty, fenty skin, savagex, blog">
     <title>Fenty.no</title>
-    <script type="module" src="js/Pages.js/index.js"></script>
+    <script type="module" src="js/index.js"></script>
     <!-- <script type="module" src="js/fetchAPI/getPost.js"></script> -->
     <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -148,11 +148,23 @@
                     </div>
 
                 </div>
-                <!-- </div> -->
                 <!-- <div class="searchbar">
                     <label for="searchbar">Eller søk etter tema:</label>
                     <input type="search" id="searchbar" name="searchbar" placeholder="Søk i innlegg..">
                 </div> -->
+                <div class="social-media-sidebar">
+                    <h2>Sosiale media</h2>
+                    <div class="some-icons">
+                        <div class="instagram-icon">
+                            <a href="https://instagram.com/fentynorge" target="_blank" aria-label="instagram link"><i
+                                    class="fa-brands fa-instagram fa-2xl"></i> Følg oss på Instagram</a>
+                        </div>
+                        <div class="twitter-icon">
+                            <a href="https://x.com/fentynorge" target="_blank" aria-label="Twitter/X link"><i
+                                    class="fa-brands fa-x-twitter fa-2xl"></i> Følg oss på X</a>
+                        </div>
+                    </div>
+                </div>
                 <div class="newest-comments">
                     <h2>Nye kommentarer</h2>
 
