--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
         content="Har du spørsmpål? Her kan du sende inn et kontaktskjema om du lurer på, eller savner, noe.">
     <meta name="keywords" content="rihanna, fenty, fenty beauty, fenty skin, savagex, blog, kontakt, spørsmål, svar">
     <title>Fenty.no - Kontakt</title>
-    <script type="module" src="js/Pages.js/index.js"></script>
+    <script type="module" src="js/index.js"></script>
     <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
