--- a/savagex.html
+++ b/savagex.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Her finner du info om Rihannas varemerke Savage x Fenty">
     <meta name="keywords" content="rihanna, fenty, savagex, blog">
     <title>Fenty.no - Savage x Fenty</title>
-    <script type="module" src="js/Pages.js/index.js"></script>
+    <script type="module" src="js/index.js"></script>
     <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
