Footer update and page styling
Updated the footer with pages links that's not accessible for keyboard users as the sub menu wont open on tab.
Social media icons moved to the sidebar.
also made some styling changes on the discography page.

--- a/fenty-skin.html
+++ b/fenty-skin.html
@@ -71,7 +71,8 @@
                     <p>Lansert USA: 2020</p>
                     <p>Lansert Norge: 2021</p>
                     <p>CEO: Robyn Rihanna Fenty</p>
-                    <p>Hjemmeside: <a href="https://www.fentyskin.com" target="_blank">www.fentyskin.com</a></p>
+                    <p>Hjemmeside: <a href="https://fentybeauty.com/pages/fenty-skin"
+                            target="_blank">www.fentyskin.com</a></p>
                 </div>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/aP0IYMwOZ8U?si=OmqC7LbFVculmGSX"
                     title="YouTube video player" frameborder="0"
@@ -102,13 +103,11 @@
                 </div>
             </div>
             <div class="right-footer">
-                <p>Følg oss</p>
-                <div class="social-media">
-                    <div class="instagram"><a href="https://instagram.com/fentynorge" target="_blank"
-                            aria-label="instagram link"><i class="fa-brands fa-instagram fa-2xl"></i></a></div>
-                    <div class="twitter"><a href="https://x.com/fentynorge" target="_blank"
-                            aria-label="Twitter/X link"><i class="fa-brands fa-x-twitter fa-2xl"></i></a></div>
-                </div>
+                <ul>
+                    <li><a href="fenty-beauty.html">Om Fenty Beauty</a></li>
+                    <li><a href="fenty-skin.html">Om Fenty Skin</a></li>
+                    <li><a href="savagex.html">Om SavageX</a></li>
+                </ul>
             </div>
         </div>
     </footer>
