--- a/index.html
+++ b/index.html
@@ -130,7 +130,6 @@
                 <div class="filter-posts">
                     <img src="/img/instagram-header.png" alt="image of Rihanna">
                     <h2>Filtrer Innlegg:</h2>
-                    <!-- <div class="horizontal-line"></div> -->
                     <div class="filter-posts-by">
                         <label for="filter-posts-by">Velg kategori:</label>
                         <div class="option-inputs">
@@ -155,11 +154,11 @@
                 <div class="social-media-sidebar">
                     <h2>Sosiale media</h2>
                     <div class="some-icons">
-                        <div class="instagram-icon">
+                        <div class="instagram">
                             <a href="https://instagram.com/fentynorge" target="_blank" aria-label="instagram link"><i
                                     class="fa-brands fa-instagram fa-2xl"></i> Følg oss på Instagram</a>
                         </div>
-                        <div class="twitter-icon">
+                        <div class="twitter">
                             <a href="https://x.com/fentynorge" target="_blank" aria-label="Twitter/X link"><i
                                     class="fa-brands fa-x-twitter fa-2xl"></i> Følg oss på X</a>
                         </div>
@@ -206,13 +205,11 @@
                 </div>
             </div>
             <div class="right-footer">
-                <p>Følg oss</p>
-                <div class="social-media">
-                    <div class="instagram"><a href="https://instagram.com/fentynorge" target="_blank"
-                            aria-label="instagram link"><i class="fa-brands fa-instagram fa-2xl"></i></a></div>
-                    <div class="twitter"><a href="https://x.com/fentynorge" target="_blank"
-                            aria-label="Twitter/X link"><i class="fa-brands fa-x-twitter fa-2xl"></i></a></div>
-                </div>
+                <ul>
+                    <li><a href="fenty-beauty.html">Om Fenty Beauty</a></li>
+                    <li><a href="fenty-skin.html">Om Fenty Skin</a></li>
+                    <li><a href="savagex.html">Om SavageX</a></li>
+                </ul>
             </div>
         </div>
     </footer>
