--- a/single-post.html
+++ b/single-post.html
@@ -72,17 +72,17 @@
                 <h2>Legg igjen en kommentar:</h2>
                 <form id="comment-form" novalidate>
                     <div class="input-control">
-                        <label for="username">Navn:</label>
+                        <label for="username">Navn*</label>
                         <input type="text" id="username" name="username" required>
                         <div class="form-error"></div>
                     </div>
                     <div class="input-control">
-                        <label for="email">Email:</label>
+                        <label for="email">Email*</label>
                         <input type="email" id="email" name="email" required>
                         <div class="form-error"></div>
                     </div>
                     <div class="input-control">
-                        <label for="comment">Kommentar:</label>
+                        <label for="comment">Kommentar*</label>
                         <textarea id="comment" name="comment"
                             placeholder="Skriv kommentaren din her (minimum 4 karakterer)" required></textarea>
                         <div class="form-error"></div>
@@ -130,13 +130,11 @@
                 </div>
             </div>
             <div class="right-footer">
-                <p>Følg oss</p>
-                <div class="social-media">
-                    <div class="instagram"><a href="https://instagram.com/fentynorge" target="_blank"
-                            aria-label="instagram link"><i class="fa-brands fa-instagram fa-2xl"></i></a></div>
-                    <div class="twitter"><a href="https://x.com/fentynorge" target="_blank"
-                            aria-label="Twitter/X link"><i class="fa-brands fa-x-twitter fa-2xl"></i></a></div>
-                </div>
+                <ul>
+                    <li><a href="fenty-beauty.html">Om Fenty Beauty</a></li>
+                    <li><a href="fenty-skin.html">Om Fenty Skin</a></li>
+                    <li><a href="savagex.html">Om SavageX</a></li>
+                </ul>
             </div>
         </div>
     </footer>
