--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Marte Lilleberre">
-    <meta name="description" content="Litt om hvem som står bak fenty.no">
+    <meta name="description" content="Litt om oss som står bak fenty norge">
     <meta name="keywords" content="rihanna, fenty, fenty beauty, fenty skin, savagex, blog, om oss, informasjon">
     <title>Fenty.no - Om oss</title>
     <script type="module" src="js/index.js"></script>
@@ -115,13 +115,11 @@
                 </div>
             </div>
             <div class="right-footer">
-                <p>Følg oss</p>
-                <div class="social-media">
-                    <div class="instagram"><a href="https://instagram.com/fentynorge" target="_blank"
-                            aria-label="instagram link"><i class="fa-brands fa-instagram fa-2xl"></i></a></div>
-                    <div class="twitter"><a href="https://x.com/fentynorge" target="_blank"
-                            aria-label="Twitter/X link"><i class="fa-brands fa-x-twitter fa-2xl"></i></a></div>
-                </div>
+                <ul>
+                    <li><a href="fenty-beauty.html">Om Fenty Beauty</a></li>
+                    <li><a href="fenty-skin.html">Om Fenty Skin</a></li>
+                    <li><a href="savagex.html">Om SavageX</a></li>
+                </ul>
             </div>
         </div>
     </footer>
