--- a/fenty-beauty.html
+++ b/fenty-beauty.html
@@ -114,13 +114,11 @@
                 </div>
             </div>
             <div class="right-footer">
-                <p>Følg oss</p>
-                <div class="social-media">
-                    <div class="instagram"><a href="https://instagram.com/fentynorge" target="_blank"
-                            aria-label="instagram link"><i class="fa-brands fa-instagram fa-2xl"></i></a></div>
-                    <div class="twitter"><a href="https://x.com/fentynorge" target="_blank"
-                            aria-label="Twitter/X link"><i class="fa-brands fa-x-twitter fa-2xl"></i></a></div>
-                </div>
+                <ul>
+                    <li><a href="fenty-beauty.html">Om Fenty Beauty</a></li>
+                    <li><a href="fenty-skin.html">Om Fenty Skin</a></li>
+                    <li><a href="savagex.html">Om SavageX</a></li>
+                </ul>
             </div>
         </div>
         </div>
