--- a/discography.html
+++ b/discography.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Marte Lilleberre">
     <meta name="description" content="Her finner du informasjon om Rihannas musikkutgivelser">
-    <meta name="keywords" content="rihanna, fenty, fenty beauty, fenty skin, savagex, blog, musikk">
-    <title>Fenty.no - Kontakt</title>
+    <meta name="keywords" content="rihanna, fenty, fenty beauty, fenty skin, savagex, blog, musikk, album">
+    <title>Fenty.no - Musikk</title>
     <script type="module" src="js/index.js"></script>
     <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
