--- a/fenty-skin.html
+++ b/fenty-skin.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Marte Lilleberre">
     <meta name="description" content="Her finner du informasjon om Rihannas varemerke Fenty Skin">
-    <meta name="keywords" content="rihanna, fenty, fenty beauty, fenty skin, blog">
+    <meta name="keywords" content="rihanna, fenty, fenty skin, blog, hudpleie, produkter">
     <title>Fenty.no - Fenty Skin</title>
     <script type="module" src="js/index.js"></script>
     <link rel="stylesheet" href="/css/index.css">
