--- a/category.html
+++ b/category.html
@@ -7,9 +7,8 @@
     <meta name="author" content="Marte Lilleberre">
     <meta name="description" content="Her finner du blog innlegg som matcher kategorien du valgte">
     <meta name="keywords" content="rihanna, fenty, fenty beauty, fenty skin, savagex, blog, kategori">
-    <title>Fenty.no - Category: </title>
+    <title>Fenty.no - Kategori </title>
     <script type="module" src="js/index.js"></script>
-    <!-- <script type="module" src="js/Pages.js/category.js"></script> -->
     <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
