--- a/fenty-beauty.html
+++ b/fenty-beauty.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Marte Lilleberre">
     <meta name="description" content="Her finner du informasjon om Rihannas varemerke Fenty Beauty">
-    <meta name="keywords" content="rihanna, fenty, fenty beauty, fenty skin, blog">
-    <title>Fenty.no - Savage x Fenty</title>
+    <meta name="keywords" content="rihanna, fenty, fenty beauty, blog, sminke, produkter">
+    <title>Fenty.no - Fenty Beauty</title>
     <script type="module" src="js/index.js"></script>
     <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
