--- a/savagex.html
+++ b/savagex.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Marte Lilleberre">
     <meta name="description" content="Her finner du info om Rihannas varemerke Savage x Fenty">
-    <meta name="keywords" content="rihanna, fenty, savagex, blog">
+    <meta name="keywords" content="rihanna, fenty, savagex, blog, undertøy, treningsklær">
     <title>Fenty.no - Savage x Fenty</title>
     <script type="module" src="js/index.js"></script>
     <link rel="stylesheet" href="/css/index.css">
