--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
                 <form id="contact-form"
                     action="https://fenty.berremarte.no/wp-json/contact-form-7/v1/contact-forms/276/feedback"
                     method="post">
-                    <fieldset aria-labelledby="form-legend">
+                    <fieldset>
                         <legend>Fyll ut skjemaet</legend>
                         <div class="input-control">
                             <label for="your-name" id="name-label">Navn*</label>
