--- a/fenty-beauty.html
+++ b/fenty-beauty.html
@@ -77,13 +77,14 @@
                     merket ville skape noe for alle. Inklusiviteten med 40 foundation nyanser ved lansering fylte
                     et stort hull i kosmetikk bransjen.</p>
 
-                <p>20. januar 2021 sendte jeg Rihanna en pm på instagram der jeg skrev
+                <p>20. januar 2021 sendte jeg Rihanna en pm på instagram der jeg skrev</p>
                 <blockquote>"Just a friendly reminder that Norway doesn't have Sephora and our import charges are crazy
                     so this bitch be broke from buying Fenty Beauty/skin/savagex. FENTY doesn't ship here either so
-                    helpp".</blockquote> Som hun noen dager senere responderte på med <blockquote>"Lolol I gotchu sis"
-                </blockquote>
-                Og jammen var hun på saken, for i mai samme år, nærmere bestemt 27.mai, lanserte Rihanna sine merker
-                Fenty Beauty og Fenty Skin hos Fredrik & Louisa her i landet.
+                    helpp".</blockquote>
+                <p>Som hun noen dager senere responderte på med</p>
+                <blockquote>"Lolol I gotchu sis"</blockquote>
+                <p>Og jammen var hun på saken, for i mai samme år, nærmere bestemt 27.mai, lanserte Rihanna sine merker
+                    Fenty Beauty og Fenty Skin hos Fredrik & Louisa her i landet.
                 </p>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/R6FghvQoz9Y?si=8Y89xQTIPJJvkoa0"
                     title="YouTube video player" frameborder="0"
@@ -120,7 +121,6 @@
                     <li><a href="savagex.html">Om SavageX</a></li>
                 </ul>
             </div>
-        </div>
         </div>
     </footer>
 </body>
