--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
                                 placeholder="Meldingen din må være på over 25 karakterer.."></textarea>
                             <div class="form-error"></div>
                         </div>
-                        <input type="hidden" name="_wpcf7_unit_tag" value="wpcf7-f91-p92-o1" />
+                        <input type="hidden" name="_wpcf7_unit_tag" value="wpcf7-f91-p92-o1">
                         <div class="submit-form">
                             <button type="submit" id="submit">Send inn kontaktskjema</button>
                             <div class="error-message"></div>
