Added Privacy Policy page
and link to it in the footer

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Marte Lilleberre">
-    <meta name="description" content="Her finner du blog innlegg som matcher kategorien du valgte">
-    <meta name="keywords" content="rihanna, fenty, fenty beauty, fenty skin, savagex, blog, kategori">
-    <title>Fenty.no - Kategori </title>
+    <meta name="description" content="Her finner du informasjon om vår personvernerklæring">
+    <meta name="keywords"
+        content="rettigheter, lagring, informasjonskapsler, datainnsamling, sikkerhet, kontaktinformasjon">
+    <title>Fenty.no - Personvernerklæring</title>
     <script type="module" src="js/index.js"></script>
     <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,13 +37,11 @@
             <a href="index.html">
                 <img src="img/logo-white.png" alt="fenty site logo">
             </a>
-            <!-- <h1 class="site-name-placeholder">FENTY.NO</h1>
-            <p>Få de aller siste nyhetene on Rihannas utgivelser</p> -->
         </div>
         <div class="nav-container">
             <nav class="main-menu">
                 <ul>
-                    <li class="active"><a href="index.html">HJEM</a></li>
+                    <li><a href="index.html">HJEM</a></li>
                     <li><a href="about.html">OM OSS</a></li>
                     <li class="sub-menu-start" aria-haspopup="true" aria-expanded="false"><a href="#">VAREMERKER
                             &#9660;</a>
@@ -59,14 +58,54 @@
             <div class="hamburger-menu"><i class="fa-solid fa-bars fa-2xl" style="color: #FFF;"></i></div>
         </div>
     </header>
-    <h1 class="news-and-content">Kategori: </h1>
     <main>
-        <div class="blog-content">
-            <div class="blog-posts-category-container">
-                <div class="loader">Loading..</div>
+        <div class="contact-page-container">
+            <div class="about-text">
+                <h1>Personvernerklæring</h1>
+                <h2>Denne personvernerklæringen beskriver hvordan vi samler inn og behandler personopplysninger gjennom
+                    vår nettside. Ved å bruke nettsiden vår, samtykker du i behandlingen av dine personopplysninger i
+                    samsvar med denne erklæringen.</h2>
+
+                <p class="pp-title">1. Datainnsamling og -bruk</p>
+
+                <p class="pp-title">1.1 Kontaktskjema</p>
+                <p>Når du sender inn informasjon gjennom kontaktskjemaet på nettsiden vår, samler vi inn ditt navn,
+                    e-postadresse og melding. Disse opplysningene brukes kun til å svare på din henvendelse og blir ikke
+                    delt med tredjeparter.</p>
+
+                <p class="pp-title">1.2 Kommentarer</p>
+                <p>Når du legger igjen en kommentar på nettsiden vår, samler vi inn ditt navn, e-postadresse og
+                    kommentartekst. Disse opplysningene vises offentlig på nettsiden og lagres i vårt system.</p>
+
+                <p class="pp-title">2. Informasjonskapsler (Cookies)</p>
+
+                <p>Vi bruker informasjonskapsler for å forbedre din brukeropplevelse på nettsiden. Informasjonskapsler
+                    er små tekstfiler som lagres på din enhet og hjelper oss med å analysere hvordan nettsiden brukes.
+                </p>
+
+                <p class="pp-title">3. Dine rettigheter</p>
+
+                <p>Du har rett til å be om innsyn i, korrigering av, sletting av eller begrensning av behandling av
+                    personopplysningene vi har om deg. Du kan også trekke tilbake ditt samtykke når som helst.</p>
+
+                <p class="pp-title">4. Sikkerhet</p>
+
+                <p>Vi tar rimelige tiltak for å sikre personopplysningenes konfidensialitet og integritet. Likevel kan
+                    vi ikke garantere fullstendig sikkerhet ved overføring av informasjon over internett.</p>
+
+                <p class="pp-title">5. Endringer i personvernerklæringen</p>
+
+                <p>Vi forbeholder oss retten til å endre denne personvernerklæringen når som helst. Oppdateringer vil
+                    bli publisert på nettsiden vår.</p>
+
+                <p class="pp-title">Kontaktinformasjon:</p>
+                <p><a href="mailto:fentynorge@gmail.com" class="mail-to">fentynorge@gmail.com</a></p>
+                <p>Eller send oss en melding via vårt <a href="contact.html" class="mail-to">kontakskjema her.</a></p>
+
+                <p><i>Dato for siste oppdatering: 18.02.2024</i></p>
+
             </div>
         </div>
-
     </main>
     <footer>
         <div class="footer-content">
