--- a/single-post.html
+++ b/single-post.html
@@ -124,7 +124,7 @@
             </div>
             <div class="center-footer">
                 <div class="copyright">
-                    <p>Copyright berremarte.no 2024</p>
+                    <p>Copyright Fenty.no 2024</p>
                     <p>All Rights Reserved</p>
                 </div>
             </div>
@@ -133,6 +133,7 @@
                     <li><a href="fenty-beauty.html">Om Fenty Beauty</a></li>
                     <li><a href="fenty-skin.html">Om Fenty Skin</a></li>
                     <li><a href="savagex.html">Om SavageX</a></li>
+                    <li><a href="privacy-policy.html">Personvernerklæring</a></li>
                 </ul>
             </div>
         </div>
