--- a/savagex.html
+++ b/savagex.html
@@ -111,7 +111,7 @@
             </div>
             <div class="center-footer">
                 <div class="copyright">
-                    <p>Copyright berremarte.no 2024</p>
+                    <p>Copyright Fenty.no 2024</p>
                     <p>All Rights Reserved</p>
                 </div>
             </div>
