--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="rihanna, fenty, fenty beauty, fenty skin, savagex, blog, kontakt, spørsmål, svar">
     <title>Fenty.no - Kontakt</title>
     <script type="module" src="js/index.js"></script>
+    <link rel="icon" type="image/png" href="/img/icons/favicon.png">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
