--- a/fenty-beauty.html
+++ b/fenty-beauty.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="rihanna, fenty, fenty beauty, blog, sminke, produkter">
     <title>Fenty.no - Fenty Beauty</title>
     <script type="module" src="js/index.js"></script>
+    <link rel="icon" type="image/png" href="/img/icons/favicon.png">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
