--- a/savagex.html
+++ b/savagex.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="rihanna, fenty, savagex, blog, undertøy, treningsklær">
     <title>Fenty.no - Savage x Fenty</title>
     <script type="module" src="js/index.js"></script>
+    <link rel="icon" type="image/png" href="/img/icons/favicon.png">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -120,6 +121,7 @@
                     <li><a href="fenty-beauty.html">Om Fenty Beauty</a></li>
                     <li><a href="fenty-skin.html">Om Fenty Skin</a></li>
                     <li><a href="savagex.html">Om SavageX</a></li>
+                    <li><a href="privacy-policy.html">Personvernerklæring</a></li>
                 </ul>
             </div>
         </div>
