--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="rihanna, fenty, fenty beauty, fenty skin, savagex, blog, om oss, informasjon">
     <title>Fenty.no - Om oss</title>
     <script type="module" src="js/index.js"></script>
+    <link rel="icon" type="image/png" href="/img/icons/favicon.png">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
