--- a/fenty-skin.html
+++ b/fenty-skin.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="rihanna, fenty, fenty skin, blog, hudpleie, produkter">
     <title>Fenty.no - Fenty Skin</title>
     <script type="module" src="js/index.js"></script>
+    <link rel="icon" type="image/png" href="/img/icons/favicon.png">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
