--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="rihanna, fenty, fenty beauty, fenty skin, savagex, blog">
     <title>Fenty.no</title>
     <script type="module" src="js/index.js"></script>
-    <!-- <script type="module" src="js/fetchAPI/getPost.js"></script> -->
+    <link rel="icon" type="image/png" href="/img/icons/favicon.png">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,8 +38,6 @@
             <a href="index.html">
                 <img src="img/logo-white.png" alt="fenty site logo">
             </a>
-            <!-- <h1 class="site-name-placeholder">FENTY.NO</h1>
-            <p>Få de aller siste nyhetene on Rihannas utgivelser</p> -->
         </div>
         <div class="nav-container">
             <nav class="main-menu">
@@ -147,10 +145,6 @@
                     </div>
 
                 </div>
-                <!-- <div class="searchbar">
-                    <label for="searchbar">Eller søk etter tema:</label>
-                    <input type="search" id="searchbar" name="searchbar" placeholder="Søk i innlegg..">
-                </div> -->
                 <div class="social-media-sidebar">
                     <h2>Sosiale media</h2>
                     <div class="some-icons">
