--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -10,6 +10,7 @@
         content="rettigheter, lagring, informasjonskapsler, datainnsamling, sikkerhet, kontaktinformasjon">
     <title>Fenty.no - Personvernerklæring</title>
     <script type="module" src="js/index.js"></script>
+    <link rel="icon" type="image/png" href="/img/icons/favicon.png">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
