--- a/single-post.html
+++ b/single-post.html
@@ -11,6 +11,7 @@
     <title>Fenty.no - blog post</title>
     <script type="module" src="js/index.js"></script>
     <script type="module" src="js/Pages.js/singlePost.js"></script>
+    <link rel="icon" type="image/png" href="/img/icons/favicon.png">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
